# LivePresetsExtension

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md  build.gradle.kts  meson.build  meson_options.txt  settings.gradle.kts
.github/workflows/: ci.yaml
WDL-library/: build.gradle.kts
benchmarks/: meson.build
include/: meson.build
liblpe/: ExtensionEntry.cpp  LivePresetsExtension.cpp  LivePresetsExtension.h  lpe_ultimate.h  meson.build
liblpe/controller/: AboutController.cpp  AboutController.h  ConfirmationController.cpp  ConfirmationController.h  ControlViewController.cpp  ControlViewController.h  LivePresetEditController.cpp  LivePresetEditController.h  LivePresetsController.cpp  LivePresetsController.h  SettingsController.cpp  SettingsController.h  meson.build
liblpe/data/: LivePresetsModel.cpp  LivePresetsModel.h  meson.build
liblpe/data/models/: ActionCommand.cpp  ActionCommand.h  CommandList.cpp  CommandList.h  Control.cpp  Control.h  ControlInfo.cpp  ControlInfo.h  FilterPreset.cpp  FilterPreset.h  FxInfo.cpp  FxInfo.h  Hardware.cpp  Hardware.h  HotkeyCommand.cpp  HotkeyCommand.h  HwSendInfo.cpp  HwSendInfo.h  LivePreset.cpp  LivePreset.h  MasterTrackInfo.cpp  MasterTrackInfo.h  Models.fwd.h  StringProjectStateContext.cpp  StringProjectStateContext.h  SwSendInfo.cpp  SwSendInfo.h  TrackInfo.cpp  TrackInfo.h  meson.build
liblpe/data/models/base/: BaseCommand.h  BaseInfo.cpp  BaseInfo.h  BaseSendInfo.cpp  BaseSendInfo.h  BaseTrackInfo.cpp  BaseTrackInfo.h  Filterable.cpp  Parameter.cpp  Parameter.h  ParameterInfo.cpp  ParameterInfo.h  Persistable.cpp  Persistable.h  PluginRecallStrategies.cpp  meson.build
liblpe/plugins/: lpe_ultimate.h  reaper_plugin.h  reaper_plugin_functions.h
liblpe/resources/: .gitignore  meson.build  resource.h  resource.rc
liblpe/ui/: ControlsListAdapter.cpp  ControlsListAdapter.h  FilterPresetsComboAdapter.cpp  FilterPresetsComboAdapter.h  LivePresetsListAdapter.cpp  LivePresetsListAdapter.h  LivePresetsTreeAdapter.cpp  LivePresetsTreeAdapter.h  meson.build
liblpe/ui/base/: ComboBox.cpp  ComboBox.h  ComboBoxAdapter.h  DockWindow.cpp  DockWindow.h  ListView.cpp  ListView.h  ListViewAdapter.cpp  ListViewAdapter.h  ModalWindow.cpp  ModalWindow.h  TreeView.cpp  TreeView.h  TreeViewAdapter.h  meson.build
liblpe/util/: ProjectChangeListener.cpp  ProjectChangeListener.h  meson.build  util.cpp  util.h
src/: ExtensionEntry.cpp  LivePresetsExtension.cpp  LivePresetsExtension.h  LivePresetsExtension.rs  meson.build
src/controller/: SettingsController.cpp
src/data/: meson.build
src/data/models/: ActionCommand.h  HotkeyCommand.cpp  HwSendInfo.cpp  LivePreset.h  MasterTrackInfo.cpp  TrackInfo.h  meson.build
src/data/models/base/: BaseSendInfo.cpp  BaseTrackInfo.cpp  Filterable.h  Parameter.h  ParameterInfo.cpp  Persistable.cpp  Persistable.h
src/main/cpp/: ExtensionEntry.cpp  LivePresetsExtension.cpp
src/main/cpp/controller/: ConfirmationController.cpp  LivePresetEditController.cpp  LivePresetsController.cpp  SettingsController.cpp
src/main/cpp/data/: LivePresetsModel.cpp
src/main/cpp/data/models/: ActionCommand.cpp  CommandList.cpp  FilterPreset.cpp  FxInfo.cpp  HotkeyCommand.cpp  HwSendInfo.cpp  LivePreset.cpp  MasterTrackInfo.cpp  SwSendInfo.cpp  TrackInfo.cpp
src/main/cpp/data/models/base/: BaseInfo.cpp  BaseSendInfo.cpp  BaseTrackInfo.cpp  Filterable.cpp  Parameter.cpp  ParameterInfo.cpp  PluginRecallStrategies.cpp
src/main/cpp/ui/: LivePresetsListAdapter.cpp  LivePresetsTreeAdapter.cpp
src/main/cpp/ui/base/: ComboBox.cpp  DockWindow.cpp  ListView.cpp  ListViewAdapter.cpp  ModalWindow.cpp  TreeView.cpp
src/main/cpp/util/: ProjectChangeListener.cpp  util.cpp
src/main/headers/: LivePresetsExtension.h
src/main/headers/controller/: AboutController.h  ConfirmationController.h  LivePresetEditController.h  LivePresetsController.h  ModalTest.h  SettingsController.h
src/main/headers/data/: LivePresetsModel.h
src/main/headers/data/models/: ActionCommand.h  CommandList.h  FilterPreset.h  FxInfo.h  HotkeyCommand.h  HwSendInfo.h  LivePreset.h  MasterTrackInfo.h  StringProjectStateContext.h  SwSendInfo.h  TrackInfo.h
src/main/headers/data/models/base/: BaseCommand.h  BaseInfo.h  BaseSendInfo.h  BaseTrackInfo.h  Filterable.h  Parameter.h  ParameterInfo.h  PluginRecallStrategies.h
src/main/headers/plugins/: lpe_ultimate.h  reaper_plugin_functions.h
src/main/headers/resources/: resource.h  resource.rc
src/main/headers/ui/: FilterPresetsComboAdapter.h  LivePresetsListAdapter.h  LivePresetsTreeAdapter.h
src/main/headers/ui/base/: DockWindow.h  ListView.h  ListViewAdapter.h  ModalWindow.h  TreeView.h  TreeViewAdapter.h
src/main/headers/util/: util.h
src/test/cpp/: ParameterInfoTest.cpp  main.cpp  utils_test.cpp
src/ui/: FilterPresetsComboAdapter.cpp
src/ui/base/: ComboBoxAdapter.h  ListView.cpp  ListView.h  ModalWindow.cpp  ModalWindow.h  TreeView.cpp  TreeView.h
src/util/: ProjectChangeListener.h  meson.build
subprojects/: .gitignore  WDL.wrap  reaper-sdk.wrap  wdl.wrap
subprojects/packagefiles/WDL/: meson.build
subprojects/packagefiles/reaper-sdk/: meson.build
subprojects/packagefiles/wdl/: meson.build
tests/: ParameterInfoTest.cpp  meson.build
tools/: genversion.cpp.in  meson.build
