project_sources +=files(
    'ActionCommand.cpp',
    'CommandList.cpp',
    'FilterPreset.cpp',
    'FxInfo.cpp',
    'HotkeyCommand.cpp',
    'HwSendInfo.cpp',
    'LivePreset.cpp',
    'MasterTrackInfo.cpp',
    'StringProjectStateContext.cpp',
    'SwSendInfo.cpp',
    'TrackInfo.cpp',
    'Control.cpp',
    'ControlInfo.cpp',
    'Hardware.cpp',
)

subdir('base')